module(name="lock_free_work_pool")

bazel_dep(name = "googletest", version = "1.16.0")
bazel_dep(name = "google_benchmark", version = "1.9.2")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "concurrent_queue",
    url = "https://github.com/cameron314/concurrentqueue/archive/refs/tags/v1.0.4.zip",
    strip_prefix = "concurrentqueue-1.0.4",
    build_file = "@//:concurrent_queue.BUILD"
)