cc_library(
    name = "lock_free_mpmc",
    hdrs = ["lock_free_mpmc.h"],
    deps = [
        ":task_store",
        "@concurrent_queue//:blockingconcurrentqueue",
    ],
    visibility = ["//visibility:public"]
)

cc_library(
    name = "thread_pool",
    hdrs = ["thread_pool.h"],
    deps = [
        ":task_store"
    ],
    visibility = ["//visibility:public"]
)

cc_library(
    name = "task_store",
    hdrs = ["task_store.h"],
    visibility = ["//visibility:public"]
)
